--- a/index.html
+++ b/index.html
@@ -189,7 +189,9 @@
     return height * 0.66 - getWizardHeight() / 2;
   }
 
-</script>  
+</script> 
+<script src="js/stat.js">
+</script> 
 <script src="js/game.js">
 </script>
 </body>
